# mini-projects

./: README.md
Clash_Scraper/: ClashCards.json  ClashScraper.py  README.md
Minesweeper_bot/: Makefile  README.md  a.out  constants.h  gameWindow.h  gridMouseTracker.h  helper.h  main.cpp  makefile  mineSweeper.cpp  mineSweeper.h  minesweeper.cpp  minesweeper.h  out
Minesweeper_bot/include/: constants.h  mineSweeper.h
Minesweeper_bot/src/: gameWindow.cpp  gridMouseTracker.cpp  helper.cpp  main.cpp
Wordle_Solver/: All_Words.cpp  All_Words.h  CMakeLists.txt  Makefile  README.md  Wordle.cpp  main.cpp  test.txt
Wordle_Solver/include/: Helper.h  Possible_Words.h
Wordle_Solver/include/gui/: Frame.h
Wordle_Solver/src/: Helper.cpp  Possible_Words.cpp
Wordle_Solver/src/gui/: Frame.cpp
